--- a/src/BeeFee/UI/WebApplication3/Areas/Org/Views/_ViewImports.cshtml
+++ b/src/BeeFee/UI/WebApplication3/Areas/Org/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
+@inherits WebApplication3.Infrastructure.BasePage<TModel>
 @using WebApplication3
 @using WebApplication3.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
