--- a/src/BeeFee/UI/WebApplication3/Areas/Org/Views/Event/Edit.cshtml
+++ b/src/BeeFee/UI/WebApplication3/Areas/Org/Views/Event/Edit.cshtml
@@ -1,8 +1,8 @@
 ﻿@using WebApplication3.Areas.Org.Models.Event
+@inject WebApplication3.Areas.Org.Models.Event.EventRequestModel RequestModel
 @model IEventEditModel
 @{
     ViewBag.Title = "Редактировать мероприятие";
-    //var requestModel = ViewBag.RequestModel as WebApplication3.Areas.Org.Models.Event.EventRequestModel;
 }
 <div class="create">
     <div class="create--step">
@@ -11,7 +11,7 @@
             <div class="create--title">Основная информация</div>
             @if (!(Model is EventEditModel))
             {
-                <a asp-action="Edit" asp-controller="Event" asp-route-id="@Id" asp-route-parentId="@ParentId" asp-route-version="@Version" class="create--edit">редактировать</a>}
+                <a asp-action="Edit" asp-controller="Event" asp-route-id="@RequestModel.Id" asp-route-parentId="@RequestModel.ParentId" asp-route-version="@RequestModel.Version" class="create--edit">редактировать</a>}
         </div>
         @if (Model is EventEditModel)
         {
@@ -24,10 +24,10 @@
             <div class="create--title">Подробное описание</div>
             @if (!(Model is EventDescriptionModel))
             {
-                <a asp-action="EditDescription" asp-controller="Event" asp-route-id="@Id" asp-route-parentId="@ParentId" asp-route-version="@Version" class="create--edit">редактировать</a>}
+                <a asp-action="EditDescription" asp-controller="Event" asp-route-id="@RequestModel.Id" asp-route-parentId="@RequestModel.ParentId" asp-route-version="@RequestModel.Version" class="create--edit">редактировать</a>}
             else
             {
-                <a class="create--skip" asp-action="Prices" asp-controller="Event" asp-route-id="@Id" asp-route-parentId="@ParentId" asp-route-version="@Version">пропустить описание</a>
+                <a class="create--skip" asp-action="Prices" asp-controller="Event" asp-route-id="@RequestModel.Id" asp-route-parentId="@RequestModel.ParentId" asp-route-version="@RequestModel.Version">пропустить описание</a>
             }
         </div>
         @if (Model is EventDescriptionModel)
@@ -41,7 +41,7 @@
             <div class="create--title">Настройки билетов</div>
             @if (!(Model is EventPricesModel))
             {
-                <a asp-action="Prices" asp-controller="Event" asp-route-id="@Id" asp-route-parentId="@ParentId" asp-route-version="@Version" class="create--edit">редактировать</a>}
+                <a asp-action="Prices" asp-controller="Event" asp-route-id="@RequestModel.Id" asp-route-parentId="@RequestModel.ParentId" asp-route-version="@RequestModel.Version" class="create--edit">редактировать</a>}
         </div>
         @if (Model is EventPricesModel)
         {
@@ -54,7 +54,7 @@
             <div class="create--title">Предпросмотр</div>
             @if (!(Model is EventPreviewModel))
             {
-                <a asp-action="Preview" asp-controller="Event" asp-route-id="@Id" asp-route-parentId="@ParentId" asp-route-version="@Version" class="create--edit">просмотр</a>}
+                <a asp-action="Preview" asp-controller="Event" asp-route-id="@RequestModel.Id" asp-route-parentId="@RequestModel.ParentId" asp-route-version="@RequestModel.Version" class="create--edit">просмотр</a>}
         </div>
         @if (Model is EventPreviewModel)
         {
