--- a/src/BeeFee/UI/WebApplication3/Areas/Moderator/Views/Events/Index.cshtml
+++ b/src/BeeFee/UI/WebApplication3/Areas/Moderator/Views/Events/Index.cshtml
@@ -20,7 +20,7 @@
 			<td>@m.Parent.Url/@m.Url</td>
 			<td>@m.Category.Name</td>
 			<td>@m.DateTime</td>
-			<td><a asp-action="Index" asp-controller="Event" asp-route-id="@m.Id" asp-route-parentId="@m.Parent.Id" asp-route-version="@m.Version">@m.Parent.Url/@m.Url</a></td>
+			<td><a asp-area="Moderator" asp-action="Index" asp-controller="Event" asp-route-id="@m.Id" asp-route-parentId="@m.Parent.Id" asp-route-version="@m.Version">@m.Parent.Url/@m.Url</a></td>
 		</tr>
 	}
 	</tbody>
