--- a/src/BeeFee/UI/WebApplication3/Views/Events/_EventGridItem.cshtml
+++ b/src/BeeFee/UI/WebApplication3/Views/Events/_EventGridItem.cshtml
@@ -5,6 +5,6 @@
 
 <div class="col-xs-4 col-md-4">
 	<div class="grid--item">
-		<a class="item" href="/event/@Model.Parent.Url/@Model.Url"><span class="item--poster" style="background-image: url('@Images.GetImageUrl(Model.Parent.Url, Model.Url, Model.Page.Cover, 368, 190)');"></span><span class="item--date"><span>@Model.Page.Date</span></span><span class="item--title">@Model.Page.Caption</span></a>
+		<a class="item" href="/event/@Model.Parent.Url/@Model.Url"><span class="item--poster" style="background-image: url('@Images.GetImageUrl("/event/cover", Model.Page.Cover)');"></span><span class="item--date"><span>@Model.Page.Date</span></span><span class="item--title">@Model.Page.Caption</span></a>
 	</div>
 </div>
