--- a/src/BeeFee/UI/WebApplication3/Views/Events/_Filter.cshtml
+++ b/src/BeeFee/UI/WebApplication3/Views/Events/_Filter.cshtml
@@ -77,7 +77,7 @@
                                 <div class="col-xs-3 col-md-3">
                                     <div class="vertical-field--d">
                                         @*@Html.TextBoxFor(x => x.EndDate, new { @class = "vertical-field--i js-date", id = "endDate1" })*@
-                                        <input name="@Html.NameFor(x=>x.StartDate)" class="vertical-field--i js-date" type="text" id="startDate1" value="@Model.StartDate.Date.ToString("dd.MM.yyyy")" />
+                                        <input name="@Html.NameFor(x=>x.StartDate)" class="vertical-field--i js-date" type="text" id="startDate1" value="@Model.StartDate.Value.ToString("dd.MM.yyyy")" />
                                     </div>
                                 </div>
                                 <div class="col-xs-1 col-md-1" style="width: 35px;">
@@ -86,7 +86,7 @@
                                 <div class="col-xs-3 col-md-3">
                                     <div class="vertical-field--d">
                                         @*@Html.TextBoxFor(x => x.EndDate, new { @class = "vertical-field--i js-date", id = "endDate1" })*@
-                                        <input name="@Html.NameFor(x=>x.EndDate)" class="vertical-field--i js-date" type="text" id="endDate1" value="@Model.EndDate.Date.ToString("dd.MM.yyyy")" />
+                                        <input name="@Html.NameFor(x=>x.EndDate)" class="vertical-field--i js-date" type="text" id="endDate1" value="@Model.EndDate.Value.ToString("dd.MM.yyyy")" />
                                     </div>
                                 </div>
                                 <div class="col-xs-4 col-xs-offset-l-0 col-md-9 col-md-offset-l-3">
