--- a/src/BeeFee/UI/WebApplication3/Views/Profile/Edit.cshtml
+++ b/src/BeeFee/UI/WebApplication3/Views/Profile/Edit.cshtml
@@ -14,7 +14,7 @@
 					<div class="input-field--t"></div>
 				</div>
 			</div>
-			
+
 			<div>@Html.ValidationMessage("error")</div>
 			<div class="modals--submit">
 				<button class="btn is-block" type="submit">Сохранить</button>
@@ -22,12 +22,17 @@
 		</form>
 		<br />
 		<a asp-action="ChangePassword" class="btn is-block">Сменить пароль</a>
-		<br/>
+		<br />
 		<a asp-action="Registrations" class="btn is-block">История моих регистраций</a>
 		@if (User.IsInRole(RoleNames.Organizer))
 		{
 			<br/>
 			<a asp-action="First" asp-controller="Companies" asp-area="Org" class="btn is-block">Кабинет организатора</a>
+		}
+		@if (User.IsInRole(RoleNames.EventModerator))
+		{
+			<br/>
+			<a href="/Moderator/Events" class="btn is-block">Кабинет модератора</a>
 		}
 	</div>
 </div>
