phone mask check userId on buy check date on buy double format on client validation

--- a/src/BeeFee/UI/WebApplication3/Areas/Org/Views/TicketPrice/Edit.cshtml
+++ b/src/BeeFee/UI/WebApplication3/Areas/Org/Views/TicketPrice/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model WebApplication3.Areas.Org.Models.TicketPrice.TicketPriceEditModel
+﻿@using System.Globalization
+@model WebApplication3.Areas.Org.Models.TicketPrice.TicketPriceEditModel
 
 <form method="post">
 	<div class="validation" asp-validation-summary="ModelOnly"></div>
